--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,10 @@ body {
   font-size: 16px;
   line-height: 1.5;
   font-weight: 300;
-  background-color: #fdfdfd;
   background-image: -moz-linear-gradient(center bottom , rgba(240, 240, 240, 0.7) 0px, rgba(250, 250, 250, 0.8) 100%), url("../images/wallpaper03.jpg");
+  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(240,240,240,0.7)), color-stop(1, rgba(250,250,250,0.8))),url('../images/wallpaper03.jpg');
+  background-image: -ms-linear-gradient(center bottom , rgba(240, 240, 240, 0.7) 0px, rgba(250, 250, 250, 0.8) 100%), url("../images/wallpaper03.jpg");
+  background-image: linear-gradient(center bottom , rgba(240, 240, 240, 0.7) 0px, rgba(250, 250, 250, 0.8) 100%), url("../images/wallpaper03.jpg");
   background-attachment: fixed;
 
 }
